# chat

./: CMakeLists.txt  README.md  all.sh  mysqlTables.txt  oldClient.cpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: datetime.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemsgmodel.hpp  public.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: datetime.cpp  friendmodel.cpp  groupmodel.cpp  offlineusermsgmodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
