cmake_minimum_required(VERSION 3.15)
project(chat)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -g)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/server)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/server/db)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/server/model)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/server/redis)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
add_subdirectory(src)